name:           hackjack
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         crobbins

executable hackjack
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   ansi-terminal,
                   random-shuffle
  ghc-options:     -Wall
  main-is:         Hackjack.hs

