name:           hackjack
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Cary Robbins

executable hackjack
  hs-source-dirs:   src
  build-depends:    base >= 4,
                    containers,
                    random-shuffle,
                    lens
  ghc-options:      -Wall
  main-is:          Main.hs

